Resolved merge conflict

--- a/content/talk/equipo2008-16.md
+++ b/content/talk/equipo2008-16.md
@@ -39,6 +39,13 @@ caption = "My caption :smile:"
 
 # Equipo fundador
 
+Presidenta | Vicepresiente | Secretaria | Tesorera |
+------------ | ------------- | ------------- | -------------
+![](http://espacual2.netlify.com/talk/egarcia.jpg) | ![](http://espacual2.netlify.com/talk/jlopez.jpg) | ![](http://espacual2.netlify.com/talk/aclua.jpg) | ![](http://espacual2.netlify.com/talk/nferran.jpg)
+[Ercilia García Álvarez](mariaercilia.garcia@urv.cat)| [Jordi López Sintas](Jordi.Lopez@uab.cat) | [Ana Clua Infante](acluai@uoc.edu)   | [Núria Ferran Ferrer](mailto:nferranf@uoc.edu)
+Universitat Rovira i Virgili de Tarragona | Universitat Autònoma de Barcelona | Universitat Oberta de Catalunya | Universitat Oberta de Catalunya
+
+
 ## Presidenta
 [Ercilia García Álvarez](mariaercilia.garcia@urv.cat)
 Universitat Rovira i Virgili de Tarragona
