Resolved merge conflict

--- a/content/talk/equipo2017-22.md
+++ b/content/talk/equipo2017-22.md
@@ -41,18 +41,9 @@ caption = "My caption :smile:"
 
 El equipo de gestión se renueva cada 6 años. El equipo actual finaliza su mandado en el año 2022.
 
-Presidente
-[Jordi López Sintas](Jordi.Lopez@uab.cat)
-Universitat Autònoma de Barcelona
+Presidente | Vicepresienta | Secretaria | Tesorera |
+------------ | ------------- | ------------- | -------------
+![](http://espacual2.netlify.com/talk/jlopez.jpg) | ![](http://espacual2.netlify.com/talk/eperez.jpg) | ![](http://espacual2.netlify.com/talk/ccuesta.jpg) | ![](http://espacual2.netlify.com/talk/calarcon.jpg)
+[Jordi López Sintas](Jordi.Lopez@uab.cat)| [Elena Pérez Rubiales](Elena.Perez@cerhum.es) | [Carmen de la Cuesta Benjumea](ccuesta@ua.es)   | [Mari Carmen Alarcon](ncarmenalarcon@gmail.com)
+Universitat Autònoma de Barcelona | Cerhum - UAB | Universitat d'Alacant | Universidad de Murcia
 
-Vicepresidenta
-[Elena Pérez Rubiales](Elena.Perez@cerhum.es)
-Museo de arte
-
-Tesorera
-[Mari Carmen Alarcon](ncarmenalarcon@gmail.com)
-Universidad de Murcia
-
-Secretaria
-[Carmen de la Cuesta Benjumea](ccuesta@ua.es)
-Universitat d'Alacant
